results/logs/2026-04-28_pbs_7773895_syncmark_bimark_real_smoke.out
Checked 89 packages in 51ms
===============================
Run ID     : 7773895
Project    : /srv/scratch/z5542506/syncmark
Model      : gpt2
Num test   : 20
New tokens : 160
Python     : Python 3.12.12
  File "<string>", line 1
    import torch; print(torch.__version__, \"| CUDA build:\", torch.version.cuda, \"| CUDA visible:\", torch.cuda.is_available())
                                            ^
SyntaxError: unexpected character after line continuation character
PyTorch    : 
Started    : Tue Apr 28 18:22:03 AEST 2026
===============================
Tue Apr 28 18:22:03 2026       
+-----------------------------------------------------------------------------------------+
| NVIDIA-SMI 580.126.09             Driver Version: 580.126.09     CUDA Version: 13.0     |
+-----------------------------------------+------------------------+----------------------+
| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |
| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |
|                                         |                        |               MIG M. |
|=========================================+========================+======================|
|   0  Tesla V100-SXM2-32GB           On  |   00000000:3B:00.0 Off |                    0 |
| N/A   32C    P0             41W /  300W |       0MiB /  32768MiB |      0%      Default |
|                                         |                        |                  N/A |
+-----------------------------------------+------------------------+----------------------+

+-----------------------------------------------------------------------------------------+
| Processes:                                                                              |
|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |
|        ID   ID                                                               Usage      |
|=========================================================================================|
|  No running processes found                                                             |
+-----------------------------------------------------------------------------------------+
[DEBUG] Script Start. Method: bimark, ECC: none
`torch_dtype` is deprecated! Use `dtype` instead!
/srv/scratch/z5542506/syncmark/.venv/lib/python3.12/site-packages/torch/cuda/__init__.py:371: UserWarning: Found GPU0 Tesla V100-SXM2-32GB which is of compute capability (CC) 7.0.
The following list shows the CCs this version of PyTorch was built for and the hardware CCs it supports:
- 7.5 which supports hardware CC >=7.5,<8.0
- 8.0 which supports hardware CC >=8.0,<9.0 except {8.7}
- 8.6 which supports hardware CC >=8.6,<9.0 except {8.7}
- 9.0 which supports hardware CC >=9.0,<10.0
- 10.0 which supports hardware CC >=10.0,<11.0 except {10.1}
- 12.0 which supports hardware CC >=12.0,<13.0
Please follow the instructions at https://pytorch.org/get-started/locally/ to install a PyTorch release that supports one of these CUDA versions: 12.6, 12.8
  _warn_unsupported_code(d, device_cc, code_ccs)
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/srv/scratch/z5542506/syncmark/bimark/generate_text_dump.py", line 244, in <module>
    main(args)
  File "/srv/scratch/z5542506/syncmark/bimark/generate_text_dump.py", line 82, in main
    model = AutoModelForCausalLM.from_pretrained(args.model_name, device_map='auto', torch_dtype=torch.bfloat16)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/srv/scratch/z5542506/syncmark/.venv/lib/python3.12/site-packages/transformers/models/auto/auto_factory.py", line 604, in from_pretrained
    return model_class.from_pretrained(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/srv/scratch/z5542506/syncmark/.venv/lib/python3.12/site-packages/transformers/modeling_utils.py", line 277, in _wrapper
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/srv/scratch/z5542506/syncmark/.venv/lib/python3.12/site-packages/transformers/modeling_utils.py", line 5048, in from_pretrained
    ) = cls._load_pretrained_model(
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/srv/scratch/z5542506/syncmark/.venv/lib/python3.12/site-packages/transformers/modeling_utils.py", line 5468, in _load_pretrained_model
    _error_msgs, disk_offload_index = load_shard_file(args)
                                      ^^^^^^^^^^^^^^^^^^^^^
  File "/srv/scratch/z5542506/syncmark/.venv/lib/python3.12/site-packages/transformers/modeling_utils.py", line 843, in load_shard_file
    disk_offload_index = _load_state_dict_into_meta_model(
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/srv/scratch/z5542506/syncmark/.venv/lib/python3.12/site-packages/torch/utils/_contextlib.py", line 124, in decorate_context
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/srv/scratch/z5542506/syncmark/.venv/lib/python3.12/site-packages/transformers/modeling_utils.py", line 750, in _load_state_dict_into_meta_model
    param = param.to(casting_dtype)
            ^^^^^^^^^^^^^^^^^^^^^^^
torch.AcceleratorError: CUDA error: no kernel image is available for execution on the device
Search for `cudaErrorNoKernelImageForDevice' in https://docs.nvidia.com/cuda/cuda-runtime-api/group__CUDART__TYPES.html for more information.
CUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.
For debugging consider passing CUDA_LAUNCH_BLOCKING=1
Compile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.


================================================================================
                     Resource Usage on 28/04/2026 18:23:10                      

Job Id: 7773895 
Queue: CSE
Walltime: 00:01:05  (requested 02:00:00)
Job unsucesfull. Exit Status 1 - Exit status refers to the exit value of the
top process in the job, typically the shell.
This may be the exit value of the last command executed in the shell.
See job output error.

--------------------------------------------------------------------------------
|              |             GPUs              |            Memory             |
--------------------------------------------------------------------------------
| Node  GPU ID | Requested   Used   Efficiency | Available   Used              |
| k109    1    |     1        0.0       0%     | 32768 MiB  546.0M             |
--------------------------------------------------------------------------------
|Total         |     1        0.0      0.0%    |                               |
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
|              |             CPUs              |            Memory             |
--------------------------------------------------------------------------------
| Node         | Requested   Used   Efficiency | Requested   Used   Efficiency |
| k109         |     4       0.17      4.0%    |  24.0gb    0.96gb     4.0%    |
--------------------------------------------------------------------------------
